--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="src/css/style.css" rel="stylesheet" type="text/css" />
     <link href="src/css/tabler-icons.min.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="src/img/favicon.png" />
-    <title>~/.startpage</title>
+    <title>~naturbrilian/startpage</title>
   </head>
 
   <body>
